[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
device_query = "4.0.1"
itertools = "0.14.0"
nutype = { version = "0.6.2", features = ["new_unchecked"] }
pixels = "0.15.0"
rand = "0.9.2"
thiserror = "2.0.16"
tklog = "0.3.0"
winit = "0.30.12"

[dev-dependencies]
proptest = "1.8.0"
test-case = "3.3.1"
ndarray = "0.16.1"
test-context = "0.4.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }

[features]
no_coverage = []
